# vort-renderer

./: .gitignore  CMakeLists.txt
assets/human_rigged_mesh/: license.txt  scene.gltf
lib/: CMakeLists.txt
shaders/: gradient.wgsl  mesh.wgsl
src/: .clang-format  CMakeLists.txt  buffer_range.h  constants.h  deletion_queue.h  glfw3webgpu.c  glfw3webgpu.h  iterator.h  load_gltf.cc  main.cc  offscreen_target.cc  onscreen_target.cc  render_graph.cc  render_graph.h  render_system.cc  render_system.h  renderable_object_data.h  renderable_target.h  resource_bind_data.h  resource_table.cc  resource_table.h  stb_image.h  stb_image_write.h  types.h  utils.h  vertex.h  wgpu.h  wgpu_context.cc  wgpu_context.h  wgpu_initializers.cc  wgpu_initializers.h  wgpu_textures.cc  wgpu_textures.h  wgpu_utils.cc  wgpu_utils.h  window.cc  window.h
src/render_passes/: dummy_render_pass.cc  render_pass.h  scene_render_pass.cc
